# HW_WEB_modul_7

./: config.ini  my_select.py  pyproject.toml  seed.py
conf/: conect_db.py  models.py
migration/: env.py
migration/versions/: 63c277d3b439_apdate02.py  d8b7fa9398fc_init.py  db027321a588_apdate01.py
