[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Maksym <150614204+MaksElkapalka@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
faker = "^24.9.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
